--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "go.formatTool": "goimports",
-    "go.useLanguageServer": true,
+    "go.useLanguageServer": false,
     "go.languageServerFlags": [
         "-rpc.trace"
     ],
